--- a/src/components/digitalServices/digitalServices.module.css
+++ b/src/components/digitalServices/digitalServices.module.css
@@ -132,6 +132,7 @@
     font-size: 16px;
   }
   .container2 h1 {
+    font-size: 22px;
     text-align: center;
   }
   .digitalServices {
