--- a/src/components/feedback/feedback.module.css
+++ b/src/components/feedback/feedback.module.css
@@ -88,8 +88,10 @@
 }
 
 .leftColumn p {
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+
   font-size: 1.5rem;
-  line-height: 1.5;
+  line-height: 1.9;
 }
 
 .rightColumn img {
@@ -121,5 +123,9 @@
   }
   .textOverlay {
     position: relative;
+  }
+  .leftColumn p {
+    font-size: 17px;
+    line-height: 1.9;
   }
 }
